--- a/service-user.properties
+++ b/service-user.properties
@@ -4,7 +4,7 @@ management.endpoints.web.exposure.include=*
 management.endpoints.health.show-details=always
 management.info.git.mode=full
 #Configuration du service eureka
-eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip=true
 #Connexion a RABBITMQ
 logging.level.org.springframework.amqp=DEBUG
