--- a/service-registry.properties
+++ b/service-registry.properties
@@ -1,4 +1,4 @@
 server.port=8761
 #Configuration du client Eureka
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
