--- a/service-demand.properties
+++ b/service-demand.properties
@@ -16,4 +16,4 @@ spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-rabbit.url=amqp://localhost
+rabbit.url=amqp://rabbitmq
