ajout de la prise en charge de lowercase service name dans le service proxy

--- a/service-proxy.properties
+++ b/service-proxy.properties
@@ -4,3 +4,11 @@ eureka.client.service-url.defaultZone=http://service-registry:8761/eureka
 eureka.client.fetch-registry=true
 #Decouverte des services en cour Dans Eureka
 spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.routes[0].id=user-service
+spring.cloud.gateway.routes[0].uri=lb://USER-SERVICE
+spring.cloud.gateway.routes[0].predicates[0]=Path=/USER-SERVICE/**
+spring.cloud.gateway.routes[0].filters[0]=RewritePath=/USER-SERVICE/(?<segment>.*), /${segment}
+spring.cloud.gateway.routes[1].id=bank-service
+spring.cloud.gateway.routes[1].uri=lb://BANK-SERVICE
+spring.cloud.gateway.routes[1].predicates[0]=Path=/BANK-SERVICE/**
+spring.cloud.gateway.routes[1].filters[0]=RewritePath=/BANK-SERVICE/(?<segment>.*), /${segment}
