adding account-service conf

--- a/account-service.properties
+++ b/account-service.properties
@@ -1,11 +1,29 @@
-server.port=8089
-#Exposition des endpoint de gestion 
+spring.profiles.active=prod
+spring.application.name=account-service
+server.forward-headers-strategy=framework
+server.port=8081
+
+
+
+#database connexion on h2
+spring.datasource.url=jdbc:h2:mem:Account_db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.jpa.show-sql=true
+
+#Exposition des endpoint de gestion
 management.endpoints.web.exposure.include=*
-management.endpoints.health.show-details=always
+#management.endpoints.health.show-details=always
 management.info.git.mode=full
+
 #Configuration du service eureka
-eureka.client.service-url.defaultZone=http://service-registry:8761/eureka
-eureka.instance.prefer-ip=true
+eureka.instance.prefer-ip-address=true
+
+
+
 #Connexion a RABBITMQ
 logging.level.org.springframework.amqp=DEBUG
 logging.level.org.springframework=DEBUG
@@ -13,3 +31,10 @@ spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+##configuration de ssl
+#server.ssl.key-store=classpath:mykeystore.jks
+#server.ssl.key-store-password=ton_mot_de_passe
+#server.ssl.key-store-type=JKS
+#javax.net.ssl.trustStore=classpath:mykeystore.jks
+#javax.net.ssl.trustStorePassword=ton_mot_de_passe
