--- a/account-service.properties
+++ b/account-service.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=prod
 spring.application.name=account-service
 server.forward-headers-strategy=framework
-server.port=8081
+server.port=8089
 
 
 
@@ -16,11 +16,12 @@ spring.jpa.show-sql=true
 
 #Exposition des endpoint de gestion
 management.endpoints.web.exposure.include=*
-#management.endpoints.health.show-details=always
+management.endpoints.health.show-details=always
 management.info.git.mode=full
 
 #Configuration du service eureka
 eureka.instance.prefer-ip-address=true
+eureka.client.service-url.defaultZone=http://service-registery:8761/eureka
 
 
 
