--- a/service-proxy.properties
+++ b/service-proxy.properties
@@ -2,8 +2,10 @@ server.port=8079
 #Configuration d'eureka
 #eureka.client.service-url.defaultZone=http://service-registry:8761/eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-
 eureka.client.fetch-registry=true
+#Decouverte des services en cour Dans Eureka
+spring.cloud.gateway.discovery.locator.enabled=true
+
 #Decouverte des services en cour Dans Eureka
 #spring.cloud.gateway.discovery.locator.enabled=true
 #spring.cloud.gateway.routes[0].id=user-service
