--- a/service-proxy.properties
+++ b/service-proxy.properties
@@ -1,6 +1,6 @@
 server.port=8079
 #Configuration d'eureka
-#eureka.client.service-url.defaultZone=http://service-registry:8761/eureka
+eureka.client.service-url.defaultZone=http://service-registry:8761/eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.fetch-registry=true
 #Decouverte des services en cour Dans Eureka
