--- a/account-service.properties
+++ b/account-service.properties
@@ -22,7 +22,8 @@ management.info.git.mode=full
 #Configuration du service eureka
 
 eureka.instance.prefer-ip-address=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://service-registry:8761/eureka
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 
 
