--- a/account-service.properties
+++ b/account-service.properties
@@ -23,6 +23,7 @@ management.info.git.mode=full
 
 eureka.instance.prefer-ip-address=true
 eureka.client.service-url.defaultZone=http://service-registry:8761/eureka
+spring.cloud.gateway.discovery.locator.enabled=true
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 
