--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,20 @@
-xParam=10000
-filliere=informatique
-niveau=master_recherche
+#Exposition des endpoint de gestion
+management.endpoints.web.exposure.include=*
+management.endpoints.health.show-details=always
+management.info.git.mode=full
+
+#Configuration du service eureka
+
+eureka.instance.prefer-ip-address=true
+spring.cloud.gateway.discovery.locator.enabled=true
+eureka.client.service-url.defaultZone=http://service-registry:8761/eureka
+
+
+
+#Connexion a RABBITMQ
+logging.level.org.springframework.amqp=DEBUG
+logging.level.org.springframework=DEBUG
+spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
