--- a/service-notification.properties
+++ b/service-notification.properties
@@ -9,7 +9,13 @@ management.info.git.mode=full
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip=true
 
-rabbitmq.queue.name=userNotificationQueue
+#Connexion a RABBITMQ
+logging.level.org.springframework.amqp=DEBUG
+logging.level.org.springframework=DEBUG
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
 # Configuration du bd H2
 spring.datasource.url=jdbc:h2:mem:notificationsdb
