mise a jour de la config du service proxy

--- a/service-proxy.properties
+++ b/service-proxy.properties
@@ -3,6 +3,7 @@ server.port=8079
 
 #Decouverte des services en cour Dans Eureka
 spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.default-filters.enabled=false
 
 #Decouverte des services en cour Dans Eureka
 #spring.cloud.gateway.discovery.locator.enabled=true
