--- a/service-notification.properties
+++ b/service-notification.properties
@@ -6,16 +6,16 @@ management.endpoints.health.show-details=always
 management.info.git.mode=full
 
 #Configuration du service eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.instance.prefer-ip=true
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+#eureka.instance.prefer-ip=true
 
 #Connexion a RABBITMQ
-logging.level.org.springframework.amqp=DEBUG
-logging.level.org.springframework=DEBUG
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+#logging.level.org.springframework.amqp=DEBUG
+#logging.level.org.springframework=DEBUG
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
 
 # Configuration du bd H2
 spring.datasource.url=jdbc:h2:mem:notificationsdb
