--- a/application.properties
+++ b/application.properties
@@ -2,6 +2,7 @@
 management.endpoints.web.exposure.include=*
 management.endpoints.health.show-details=always
 management.info.git.mode=full
+server.forward-headers-strategy=framework
 
 #Configuration du service eureka
 
