--- a/service-notification.properties
+++ b/service-notification.properties
@@ -5,22 +5,14 @@ management.endpoints.web.exposure.include=*
 management.endpoints.health.show-details=always
 management.info.git.mode=full
 
-#Configuration du service eureka
-#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-#eureka.instance.prefer-ip=true
+# Configuration du postgrs
+spring.datasource.url=jdbc:postgresql://localhost:5432/notification_db
+spring.datasource.username=postgres
+spring.datasource.password=teacher1547.psql
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-#Connexion a RABBITMQ
-#logging.level.org.springframework.amqp=DEBUG
-#logging.level.org.springframework=DEBUG
-#spring.rabbitmq.host=localhost
-#spring.rabbitmq.port=5672
-#spring.rabbitmq.username=guest
-#spring.rabbitmq.password=guest
-
-# Configuration du bd H2
-spring.datasource.url=jdbc:h2:mem:notificationsdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+# Hibernate (ORM)
 spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
