--- a/service-depot-transfert-withdraw.yml
+++ b/service-depot-transfert-withdraw.yml
@@ -9,7 +9,7 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://service-registry:8761/eureka/
   instance:
     preferIpAddress: true
 
@@ -19,15 +19,17 @@ app:
   debug: true
 
 db:
-  connection: mysql
-  host: localhost
+  driver: mysql
+  host: dtw-db          # Matches the Docker service name
   port: 3306
-  database: banking_system
-  username: root
-  password: root
+  database: banking_dtw
+  username: banking_user
+  password: banking_password
+  charset: utf8mb4
+  collation: utf8mb4_unicode_ci
 
 rabbitmq:
-  host: localhost
+  host: rabbitmq
   port: 5672
   user: guest
   password: guest
