--- a/service-notification.properties
+++ b/service-notification.properties
@@ -5,6 +5,10 @@ management.endpoints.web.exposure.include=*
 management.endpoints.health.show-details=always
 management.info.git.mode=full
 
+#Configuration du service eureka
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+#eureka.instance.prefer-ip=true
+
 # Configuration du postgrs
 spring.datasource.url=jdbc:postgresql://localhost:5432/notification_db
 spring.datasource.username=postgres
