--- a/service-notification.properties
+++ b/service-notification.properties
@@ -5,8 +5,8 @@ management.endpoints.web.exposure.include=*
 management.endpoints.health.show-details=always
 management.info.git.mode=full
 
+#Configuration du service eureka
 spring.cloud.gateway.discovery.locator.enabled=true
-Configuration du service eureka
 eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
 eureka.instance.prefer-ip=true
 
