--- a/service-notification.properties
+++ b/service-notification.properties
@@ -10,6 +10,14 @@ spring.cloud.gateway.discovery.locator.enabled=true
 eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
 eureka.instance.prefer-ip=true
 
+#Connexion a RABBITMQ
+logging.level.org.springframework.amqp=DEBUG
+logging.level.org.springframework=DEBUG
+spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
 # Configuration du postgrs
 spring.datasource.url=jdbc:postgresql://localhost:5432/notification_db
 spring.datasource.username=postgres
