--- a/service-notification.properties
+++ b/service-notification.properties
@@ -7,7 +7,7 @@ management.info.git.mode=full
 
 #Configuration du service eureka
 spring.cloud.gateway.discovery.locator.enabled=true
-eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
+eureka.client.service-url.defaultZone=http://service-registery:8761/eureka/
 eureka.instance.prefer-ip=true
 
 #Connexion a RABBITMQ
