--- a/service-notification.properties
+++ b/service-notification.properties
@@ -7,13 +7,13 @@ management.info.git.mode=full
 
 #Configuration du service eureka
 spring.cloud.gateway.discovery.locator.enabled=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://service-registery:8761/eureka/
 eureka.instance.prefer-ip=true
 
 #Connexion a RABBITMQ
 logging.level.org.springframework.amqp=DEBUG
 logging.level.org.springframework=DEBUG
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
