--- a/service-depot-transfert-withdraw-dev.yml
+++ b/service-depot-transfert-withdraw-dev.yml
@@ -1,22 +1,36 @@
 server:
   port: 8001
-  address: 0.0.0.0
 
 spring:
   application:
     name: service-depot-transfert-withdraw
+    
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+    exchange: deposit_transfer_withdraw_events
+    type: fanout
+    queue: default
 
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/apps/
+    register-with-eureka: true
+    fetch-registry: true
   instance:
     preferIpAddress: true
+    leaseRenewalIntervalInSeconds: 30
+    hostname: localhost
 
 app:
   name: service-depot-transfert-withdraw
   env: local
+  key: base64:your-app-key-here
   debug: true
+  url: http://0.0.0.0:8001
 
 db:
   driver: mysql
@@ -28,21 +42,38 @@ db:
   charset: utf8mb4
   collation: utf8mb4_unicode_ci
 
-rabbitmq:
-  host: rabbitmq
-  port: 5672
-  user: guest
-  password: guest
-  vhost: /
-  queue: default
-  exchange:
-    name: deposit_transfer_withdraw_events
-    type: fanout
-
-sanctum:
-  stateful:
-    - "localhost:8081"
-    - "localhost:80"
-
 logging:
-  level: debug
+  level:
+    root: INFO
+    com.netflix.eureka: INFO
+    com.netflix.discovery: INFO
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
+
+cache:
+  driver: file
+
+session:
+  driver: file
+  lifetime: 120
+
+queue:
+  connection: sync
+
+mail:
+  mailer: smtp
+  host: mailpit
+  port: 1025
+  username: null
+  password: null
+  encryption: null
+  from:
+    address: "hello@example.com"
+    name: "${app.name}"
