--- a/service-deposit-transfert-withdraw.yml
+++ b/service-deposit-transfert-withdraw.yml
@@ -1,40 +1,52 @@
+server:
+  port: 8001
+
 spring:
   application:
-    name: SERVICE-DEPOSIT-TRANSFERT-WITHDRAW
-  datasource:
-    url: jdbc:mysql://dtw-db:3306/dtw_db
-    username: root
-    password: root
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
+    name: service-depot-transfert-withdraw
+    
   rabbitmq:
-    host: rabbitmq
+    host: localhost
     port: 5672
     username: guest
     password: guest
-    exchange: banking_events
-    queue: dtw_queue
-    routing-key: dtw.#
+    exchange: deposit_transfer_withdraw_events
+    type: fanout
+    queue: default
 
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://eureka-server:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/apps/
     register-with-eureka: true
     fetch-registry: true
   instance:
     preferIpAddress: true
-    hostname: service-deposit-transfert-withdraw
-    lease-renewal-interval-in-seconds: 30
-    lease-expiration-duration-in-seconds: 90
+    leaseRenewalIntervalInSeconds: 30
+    hostname: localhost
 
-server:
-  port: 8001
-  servlet:
-    context-path: /api/v1/dtw
+app:
+  name: service-depot-transfert-withdraw
+  env: local
+  key: base64:sU6WytXnWhOzw9K2G+qgLMc6HWyXo85ZL+s6jW9uDb0=
+  debug: true
+  url: http://0.0.0.0:8001
+
+db:
+  driver: mysql
+  host: localhost          # Matches the Docker service name
+  port: 3306
+  database: banking_dtw
+  username: root
+  password: 
+  charset: utf8mb4
+  collation: utf8mb4_unicode_ci
+
+logging:
+  level:
+    root: INFO
+    com.netflix.eureka: INFO
+    com.netflix.discovery: INFO
 
 management:
   endpoints:
@@ -45,9 +57,23 @@ management:
     health:
       show-details: always
 
-logging:
-  level:
-    root: INFO
-    org.springframework.web: INFO
-    com.banking.dtw: DEBUG
-    org.hibernate: INFO
+cache:
+  driver: file
+
+session:
+  driver: file
+  lifetime: 120
+
+queue:
+  connection: sync
+
+mail:
+  mailer: smtp
+  host: mailpit
+  port: 1025
+  username: null
+  password: null
+  encryption: null
+  from:
+    address: "hello@example.com"
+    name: "${app.name}"
