--- a/service-notification.properties
+++ b/service-notification.properties
@@ -1,9 +1,9 @@
 server.port=8087
 
 #Exposition des endpoint de gestion 
-management.endpoints.web.exposure.include=*
-management.endpoints.health.show-details=always
-management.info.git.mode=full
+#management.endpoints.web.exposure.include=*
+#management.endpoints.health.show-details=always
+#management.info.git.mode=full
 
 #Configuration du service eureka
 #eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
