--- a/application.properties
+++ b/application.properties
@@ -8,7 +8,7 @@ server.forward-headers-strategy=framework
 
 eureka.instance.prefer-ip-address=true
 spring.cloud.gateway.discovery.locator.enabled=true
-eureka.client.service-url.defaultZone=http://service-registery:8761/eureka
+eureka.client.service-url.defaultZone=http://service-registry:8761/eureka
 
 
 
