--- a/service-notification.properties
+++ b/service-notification.properties
@@ -7,8 +7,9 @@ management.info.git.mode=full
 
 #Configuration du service eureka
 #eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
-#spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.enabled=true
 #eureka.instance.prefer-ip=true
+
 
 #Connexion a RABBITMQ
 #logging.level.org.springframework.amqp=DEBUG
