--- a/service-notification.properties
+++ b/service-notification.properties
@@ -6,7 +6,7 @@ management.endpoints.health.show-details=always
 management.info.git.mode=full
 
 #Configuration du service eureka
-eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip=true
 
 
@@ -20,7 +20,7 @@ spring.rabbitmq.password=guest
 
 # Configuration du postgrs
 spring.datasource.url=jdbc:postgresql://localhost:5432/notification_db
-spring.datasource.username=postgres
+spring.datasource.username=localhost
 spring.datasource.password=teacher1547.psql
 spring.datasource.driver-class-name=org.postgresql.Driver
 
