--- a/service-notification.properties
+++ b/service-notification.properties
@@ -20,7 +20,7 @@ spring.rabbitmq.password=guest
 
 # Configuration du postgrs
 spring.datasource.url=jdbc:postgresql://localhost:5432/notification_db
-spring.datasource.username=localhost
+spring.datasource.username=postgres
 spring.datasource.password=teacher1547.psql
 spring.datasource.driver-class-name=org.postgresql.Driver
 
