--- a/service-notification.properties
+++ b/service-notification.properties
@@ -19,7 +19,7 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 # Configuration du postgrs
-spring.datasource.url=jdbc:postgresql://localhost:5432/notification_db
+spring.datasource.url=jdbc:postgresql://postgres:5432/notification_db
 spring.datasource.username=postgres
 spring.datasource.password=teacher1547.psql
 spring.datasource.driver-class-name=org.postgresql.Driver
