--- a/service-dtw.properties
+++ b/service-dtw.properties
@@ -1,79 +1,13 @@
-server:
-  port: 8001
+server.port=8001
 
-spring:
-  application:
-    name: service-depot-transfert-withdraw
-    
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
-    exchange: deposit_transfer_withdraw_events
-    type: fanout
-    queue: default
+# Configuration MySQL
+spring.datasource.url=jdbc:mysql://dtw-db:3306/banking_dtw?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=banking_user
+spring.datasource.password=banking_password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/apps/
-    register-with-eureka: true
-    fetch-registry: true
-  instance:
-    preferIpAddress: true
-    leaseRenewalIntervalInSeconds: 30
-    hostname: localhost
-
-app:
-  name: service-depot-transfert-withdraw
-  env: local
-  key: base64:your-app-key-here
-  debug: true
-  url: http://0.0.0.0:8001
-
-db:
-  driver: mysql
-  host: localhost          # Matches the Docker service name
-  port: 3306
-  database: banking_dtw
-  username: root
-  password: 
-  charset: utf8mb4
-  collation: utf8mb4_unicode_ci
-
-logging:
-  level:
-    root: INFO
-    com.netflix.eureka: INFO
-    com.netflix.discovery: INFO
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-  endpoint:
-    health:
-      show-details: always
-
-cache:
-  driver: file
-
-session:
-  driver: file
-  lifetime: 120
-
-queue:
-  connection: sync
-
-mail:
-  mailer: smtp
-  host: mailpit
-  port: 1025
-  username: null
-  password: null
-  encryption: null
-  from:
-    address: "hello@example.com"
-    name: "${app.name}"
+# Configuration JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
