--- a/service-dtw.properties
+++ b/service-dtw.properties
@@ -1,13 +1,16 @@
 server.port=8001
 
 # Configuration MySQL
-spring.datasource.url=jdbc:mysql://dtw-db:3306/banking_dtw?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=banking_user
-spring.datasource.password=banking_password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.url=jdbc:mysql://dtw-db:3306/banking_dtw?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+# spring.datasource.username=banking_user
+# spring.datasource.password=banking_password
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuration JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=update
+#database connexion on h2
+spring.datasource.url=jdbc:h2:mem:Account_db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
