--- a/service-dtw.properties
+++ b/service-dtw.properties
@@ -7,10 +7,9 @@ server.port=8001
 # spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #database connexion on h2
-spring.datasource.url=jdbc:h2:mem:Account_db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://postgres:5432/service_demand_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
