--- a/service-dtw.properties
+++ b/service-dtw.properties
@@ -8,13 +8,15 @@ server.port=8001
 
 #database connexion on h2
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://postgres:5432/service_demand_db
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false&serverTimezone=\UTC&useLegacyDatatimeCode=false
+spring.datasource.username=root
+spring.datasource.password=root
+
+#Hibernate Property Here
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+#Hibernate auto ddl
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG 
 
 
 
