--- a/service-dtw.properties
+++ b/service-dtw.properties
@@ -8,7 +8,7 @@ server.port=8001
 
 #database connexion on h2
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false&serverTimezone=\UTC&useLegacyDatatimeCode=false
+spring.datasource.url=jdbc:mysql://localhost:3306/service-dtw?useSSL=false&serverTimezone=\UTC&useLegacyDatatimeCode=false
 spring.datasource.username=root
 spring.datasource.password=root
 
