--- a/service-dtw.properties
+++ b/service-dtw.properties
@@ -10,7 +10,7 @@ server.port=8001
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/service-dtw?useSSL=false&serverTimezone=\UTC&useLegacyDatatimeCode=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 
 #Hibernate Property Here
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
