--- a/service-dtw.properties
+++ b/service-dtw.properties
@@ -4,13 +4,14 @@ server.port=8001
 # spring.datasource.url=jdbc:mysql://dtw-db:3306/banking_dtw?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 # spring.datasource.username=banking_user
 # spring.datasource.password=banking_password
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 #database connexion on h2
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/service-dtw?useSSL=false&serverTimezone=\UTC&useLegacyDatatimeCode=false
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=banking_user
+spring.datasource.password=banking_password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Hibernate Property Here
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
