--- a/application.properties
+++ b/application.properties
@@ -15,7 +15,7 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 #Connexion a RABBITMQ
 logging.level.org.springframework.amqp=DEBUG
 logging.level.org.springframework=DEBUG
-spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
