--- a/application.properties
+++ b/application.properties
@@ -8,14 +8,14 @@ server.forward-headers-strategy=framework
 
 eureka.instance.prefer-ip-address=true
 spring.cloud.gateway.discovery.locator.enabled=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://0.0.0.0:8761/eureka
 
 
 
 #Connexion a RABBITMQ
 logging.level.org.springframework.amqp=DEBUG
 logging.level.org.springframework=DEBUG
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=0.0.0.0
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
