--- a/service-dtw.properties
+++ b/service-dtw.properties
@@ -1,7 +1,7 @@
 server.port=8001
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/service-dtw?useSSL=false&serverTimezone=\UTC&useLegacyDatatimeCode=false
+spring.datasource.url=jdbc:mysql://dtw-db:3306/service-dtw?useSSL=false&serverTimezone=\UTC&useLegacyDatatimeCode=false
 spring.datasource.username=banking_user
 spring.datasource.password=banking_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
