--- a/account-service.properties
+++ b/account-service.properties
@@ -13,7 +13,21 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 
+#Configuration du service eureka
 
+eureka.instance.prefer-ip-address=true
+spring.cloud.gateway.discovery.locator.enabled=true
+eureka.client.service-url.defaultZone=http://31.220.93.146:8761/eureka
+
+
+
+#Connexion a RABBITMQ
+logging.level.org.springframework.amqp=DEBUG
+logging.level.org.springframework=DEBUG
+spring.rabbitmq.host=31.220.93.146
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
 ##configuration de ssl
 #server.ssl.key-store=classpath:mykeystore.jks
