--- a/demande.properties
+++ b/demande.properties
@@ -1,2 +1,17 @@
 server.port=8088
 
+#Configuration du service eureka
+
+eureka.instance.prefer-ip-address=true
+spring.cloud.gateway.discovery.locator.enabled=true
+eureka.client.service-url.defaultZone=http://31.220.93.146:8761/eureka
+
+
+
+#Connexion a RABBITMQ
+logging.level.org.springframework.amqp=DEBUG
+logging.level.org.springframework=DEBUG
+spring.rabbitmq.host=31.220.93.146
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
