--- a/service-notification.properties
+++ b/service-notification.properties
@@ -6,13 +6,13 @@ management.endpoints.health.show-details=always
 management.info.git.mode=full
 
 #Configuration du service eureka
-eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
+eureka.client.service-url.defaultZone=http://31.220.93.146:8761/eureka/
 eureka.instance.prefer-ip=true
 
 #Connexion a RABBITMQ
 logging.level.org.springframework.amqp=DEBUG
 logging.level.org.springframework=DEBUG
-spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.host=31.220.93.146
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
