--- a/service-notification.properties
+++ b/service-notification.properties
@@ -1,30 +1,46 @@
-server.port=8087
+#server.port=8087
 
+#Exposition des endpoint de gestion 
+#management.endpoints.web.exposure.include=*
+#management.endpoints.health.show-details=always
+#management.info.git.mode=full
+
+#Configuration du service eureka
+#eureka.client.service-url.defaultZone=http://31.220.93.146:8761/eureka/
+#eureka.instance.prefer-ip=true
+
+#Connexion a RABBITMQ
+#logging.level.org.springframework.amqp=DEBUG
+#logging.level.org.springframework=DEBUG
+#spring.rabbitmq.host=31.220.93.146
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
+
+server.port=8087
 #Exposition des endpoint de gestion 
 management.endpoints.web.exposure.include=*
 management.endpoints.health.show-details=always
 management.info.git.mode=full
-
 #Configuration du service eureka
-eureka.client.service-url.defaultZone=http://31.220.93.146:8761/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip=true
-
 #Connexion a RABBITMQ
 logging.level.org.springframework.amqp=DEBUG
 logging.level.org.springframework=DEBUG
-spring.rabbitmq.host=31.220.93.146
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 # Configuration du postgrs
-spring.datasource.url=jdbc:postgresql://localhost:5432/notification_db
-spring.datasource.username=postgres
-spring.datasource.password=teacher1547.psql
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/notification_db
+#spring.datasource.username=postgres
+#spring.datasource.password=teacher1547.psql
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate (ORM)
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
