--- a/service-notification.properties
+++ b/service-notification.properties
@@ -34,13 +34,13 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 # Configuration du postgrs
-#spring.datasource.url=jdbc:postgresql://localhost:5432/notification_db
-#spring.datasource.username=postgres
-#spring.datasource.password=teacher1547.psql
-#spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/notification_db
+spring.datasource.username=postgres
+spring.datasource.password=teacher1547.psql
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate (ORM)
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
