--- a/service-notification.properties
+++ b/service-notification.properties
@@ -33,14 +33,15 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-# Configuration du postgrs
-spring.datasource.url=jdbc:postgresql://localhost:5432/notification_db
-spring.datasource.username=postgres
-spring.datasource.password=teacher1547.psql
+
+
+# Configuration PostgreSQL (via variables d'environnement Docker)
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Hibernate (ORM)
+# Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
