--- a/service-proxy.properties
+++ b/service-proxy.properties
@@ -6,14 +6,14 @@ spring.cloud.gateway.discovery.locator.enabled=true
 #Configuration du service eureka
 
 eureka.instance.prefer-ip-address=true
-eureka.client.service-url.defaultZone=http://service-registry:8761/eureka
+eureka.client.service-url.defaultZone=http://31.220.93.146:8761/eureka
 
 
 
 #Connexion a RABBITMQ
 logging.level.org.springframework.amqp=DEBUG
 logging.level.org.springframework=DEBUG
-spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.host=31.220.93.146
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
