map service to online rabbit service

--- a/service-demand.properties
+++ b/service-demand.properties
@@ -6,14 +6,14 @@ management.endpoints.health.show-details=always
 management.info.git.mode=full
 
 # Configuration du service demand pour accéder à eureka
-eureka.client.service-url.defaultZone=http://service-registry:8761/eureka
+eureka.client.service-url.defaultZone=http://31.220.93.146:8761/eureka
 eureka.instance.prefer-ip=true
-eureka.host=service-registry
+eureka.host=31.220.93.146
 eureka.port=8761
 
 # Configuration du service demande pour se connecter à rabbitmq
-spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.host=31.220.93.146
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-rabbit.url=amqp://rabbitmq
+rabbit.url=amqp://31.220.93.146
