--- a/service-notification.properties
+++ b/service-notification.properties
@@ -26,3 +26,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Configuration du Spring Mail pour l'envoi du mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=msteach1547@gmail.com
+spring.mail.password=service-notification
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
