--- a/service-notification.properties
+++ b/service-notification.properties
@@ -40,3 +40,6 @@ spring.mail.username=msteach1547@gmail.com
 spring.mail.password=service-notification
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+logging.level.org.springframework.mail=DEBUG
+
+
