--- a/service-notification.properties
+++ b/service-notification.properties
@@ -17,16 +17,16 @@ spring.rabbitmq.password=guest
 
 
 # Configuration PostgreSQL (via variables d'environnement Docker)
-#spring.datasource.url=${SPRING_DATASOURCE_URL}
-#spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-#spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuration PostgreSQL (via variables d'environnement Docker)
-spring.datasource.url=jdbc:postgresql://localhost:5432/notification_db
-spring.datasource.username=postgres
-spring.datasource.password=teacher1547.psql
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/notification_db
+#spring.datasource.username=postgres
+#spring.datasource.password=teacher1547.psql
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate
 spring.jpa.hibernate.ddl-auto=update
@@ -36,8 +36,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Configuration du Spring Mail pour l'envoi du mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=msteach1547@gmail.com
-spring.mail.password=service-notification
+spring.mail.username=manuelsokoudjou@gmail.com
+spring.mail.password=oaygyzuvrvvnxfop
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 logging.level.org.springframework.mail=DEBUG
