--- a/service-proxy.properties
+++ b/service-proxy.properties
@@ -1,5 +1,5 @@
 server.port=8079
-
+server.address=0.0.0.0
 
 #Decouverte des services en cour Dans Eureka
 spring.cloud.gateway.discovery.locator.enabled=true
