--- a/service-notification.properties
+++ b/service-notification.properties
@@ -9,8 +9,8 @@ eureka.instance.prefer-ip=true
 #Connexion a RABBITMQ
 logging.level.org.springframework.amqp=DEBUG
 logging.level.org.springframework=DEBUG
-#spring.rabbitmq.host=31.220.93.146
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=31.220.93.146
+#spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
