--- a/service-user-bank-account.properties
+++ b/service-user-bank-account.properties
@@ -18,9 +18,9 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://dtw-db:3306/service_user_bank_account?useSSL=false&serverTimezone=\UTC&useLegacyDatatimeCode=false
-spring.datasource.username=root
-spring.datasource.password=root_password
+spring.datasource.url=jdbc:mysql://localhost:3306/service_user_bank_account?useSSL=false&serverTimezone=\UTC&useLegacyDatatimeCode=false
+spring.datasource.username=banking_user
+spring.datasource.password=banking_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Hibernate Property Here
