--- a/service-registery.properties
+++ b/service-registery.properties
@@ -1,5 +1,5 @@
 server.port=8761
-
+server.address=0.0.0.0
 #Configuration du client Eureka
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
