--- a/service-notification.properties
+++ b/service-notification.properties
@@ -19,16 +19,16 @@ spring.rabbitmq.password=guest
 
 
 # Configuration PostgreSQL (via variables d'environnement Docker)
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=${SPRING_DATASOURCE_URL}
+#spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuration PostgreSQL (via variables d'environnement Docker)
-#spring.datasource.url=jdbc:postgresql://localhost:5432/notification_db
-#spring.datasource.username=postgres
-#spring.datasource.password=teacher1547.psql
-#spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/notification_db
+spring.datasource.username=postgres
+spring.datasource.password=teacher1547.psql
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate
 spring.jpa.hibernate.ddl-auto=update
