--- a/service-notification.properties
+++ b/service-notification.properties
@@ -26,7 +26,7 @@ spring.rabbitmq.password=guest
 
 # Configuration PostgreSQL (via variables d'environnement Docker)
 spring.datasource.url=jdbc:postgresql://localhost:5432/notification_db
-spring.datasource.username=postgres
+spring.datasource.username=rabbitmq
 spring.datasource.password=teacher1547.psql
 spring.datasource.driver-class-name=org.postgresql.Driver
 
