--- a/service-notification.properties
+++ b/service-notification.properties
@@ -11,7 +11,7 @@ eureka.instance.prefer-ip=true
 #Connexion a RABBITMQ
 logging.level.org.springframework.amqp=DEBUG
 logging.level.org.springframework=DEBUG
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
@@ -26,7 +26,7 @@ spring.rabbitmq.password=guest
 
 # Configuration PostgreSQL (via variables d'environnement Docker)
 spring.datasource.url=jdbc:postgresql://localhost:5432/notification_db
-spring.datasource.username=rabbitmq
+spring.datasource.username=postgres
 spring.datasource.password=teacher1547.psql
 spring.datasource.driver-class-name=org.postgresql.Driver
 
