mettre a jour service-notification

--- a/service-notification.properties
+++ b/service-notification.properties
@@ -11,7 +11,7 @@ eureka.instance.prefer-ip=true
 #Connexion a RABBITMQ
 logging.level.org.springframework.amqp=DEBUG
 logging.level.org.springframework=DEBUG
-spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.host=192.168.1.157
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
