upddate service-notification

--- a/service-notification.properties
+++ b/service-notification.properties
@@ -1,6 +1,6 @@
 server.port=8087
 
-#server.address=0.0.0.0
+server.address=0.0.0.0
 #Exposition des endpoint de gestion 
 management.endpoints.web.exposure.include=*
 management.endpoints.health.show-details=always
