--- a/service-user-bank-account.properties
+++ b/service-user-bank-account.properties
@@ -5,20 +5,20 @@ server.address=0.0.0.0
 
 eureka.instance.prefer-ip-address=true
 spring.cloud.gateway.discovery.locator.enabled=true
-eureka.client.service-url.defaultZone=http://192.168.1.157:8761/eureka
+eureka.client.service-url.defaultZone=http://31.220.93.146:8761/eureka
 
 
 
 #Connexion a RABBITMQ
 logging.level.org.springframework.amqp=DEBUG
 logging.level.org.springframework=DEBUG
-spring.rabbitmq.host=192.168.1.157
+spring.rabbitmq.host=31.220.93.146
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/service-user-bank-account?useSSL=false&serverTimezone=\UTC&useLegacyDatatimeCode=false
+spring.datasource.url=jdbc:mysql://mysql:3306/service-user-bank-account?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=banking_user
 spring.datasource.password=banking_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
