--- a/service-user-bank-account.properties
+++ b/service-user-bank-account.properties
@@ -18,7 +18,7 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://mysql:3306/service-user-bank-account?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://localhost:3306/service-user-bank-account?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=banking_user
 spring.datasource.password=banking_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
