--- a/compte.properties
+++ b/compte.properties
@@ -4,14 +4,14 @@ server.port=8085
 
 eureka.instance.prefer-ip-address=true
 spring.cloud.gateway.discovery.locator.enabled=true
-eureka.client.service-url.defaultZone=http://31.220.93.146:8761/eureka
+eureka.client.service-url.defaultZone=http://service-registry:8761/eureka
 
 
 
 #Connexion a RABBITMQ
 logging.level.org.springframework.amqp=DEBUG
 logging.level.org.springframework=DEBUG
-spring.rabbitmq.host=31.220.93.146
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
